--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -1,9 +1,3 @@
-.project-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px 0;
-}
 
 .image-container {
     border-radius: 15px; 
@@ -94,7 +88,7 @@
   margin-top: 6px; 
 }
 
-@media screen and (min-width: 601px) and (max-width: 900px) {
+/* @media screen and (min-width: 601px) and (max-width: 900px) {
   .project-card {
     display: flex;
     flex-direction: column;
@@ -188,4 +182,4 @@
     text-align: center;
  }
  
-}
+} */
