--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -25,6 +25,13 @@
   padding-top: 5.4rem;
 }
 
+.project-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 0;
+}
+
 @media screen and (max-width: 400px) {
   .subtitle {
     font-size: 1.8rem;
