--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -32,6 +32,17 @@
   margin: 15px 0;
 }
 
+.image-container {
+  border-radius: 15px; 
+  border: 15px solid black;
+  border-top: 20px solid black;
+  border-bottom: 23px solid black;
+  box-shadow: 0 0 0 2px white;
+  margin: 10px;
+  margin-right: 0;
+  width: 40%;
+}
+
 @media screen and (max-width: 400px) {
   .subtitle {
     font-size: 1.8rem;
