--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -48,6 +48,21 @@
   margin-right: 0;
 }
 
+.info-container {
+  align-items: flex-end;
+  background-image: linear-gradient(var(--color2), var(--color3), var(--color4)) ; 
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  color: var(--textWhite);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 10px;
+  margin-left: 2px;
+  padding: 15px;
+  width: 40%;
+}
+
 @media screen and (max-width: 400px) {
   .subtitle {
     font-size: 1.8rem;
