--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -63,6 +63,40 @@
   width: 40%;
 }
 
+.tech-container span, .tags {
+  border: 2px solid whitesmoke;
+  border-radius: 5px;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 600;
+  padding: 0.2rem 0.5rem;
+  margin: 0.3rem;
+}
+
+.tech-container span {
+  color: black;
+}
+
+.tech-container {
+    align-items: center;
+    align-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    height: 50px;
+    justify-content: flex-end;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+
+.projectName, .aboutProject, .links-container-2 {
+  font-family: 'Nunito', sans-serif;
+  margin: 5px;
+}
+
+.projectName {
+  white-space: nowrap;
+}
+
 @media screen and (max-width: 400px) {
   .subtitle {
     font-size: 1.8rem;
