--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -63,6 +63,21 @@
   width: 40%;
 }
 
+.simple-card {
+  align-items: flex-start;
+  background-image: linear-gradient(var(--color2), var(--color3), var(--color4)) ;
+  border-radius: 15px;
+  box-shadow: var(--shadow);
+  color: var(--textWhite);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 20px 10px;
+  overflow: auto;
+  padding: 2rem 1rem;
+  width: 270px;
+}
+
 .tech-container span, .tags {
   border: 2px solid whitesmoke;
   border-radius: 5px;
@@ -96,6 +111,31 @@
 .projectName {
   white-space: nowrap;
 }
+
+.aboutProject {
+  text-align: end;
+  font-size: 18px;
+  margin-left: 15px;
+}
+
+.links-container-2 {
+  justify-content: flex-end; 
+  width: auto;
+}
+
+.links-container-2 p {
+  display: flex;
+  margin: 6px 0;
+  margin-top: 0;
+  font-weight: 600;
+}
+
+.links-container-2 a {
+  margin-left: 4.8px;
+  margin-right: 10px;
+  margin-top: 6px; 
+}
+
 
 @media screen and (max-width: 400px) {
   .subtitle {
