--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -1,98 +1,8 @@
 
 
 
-/* @media screen and (min-width: 601px) and (max-width: 900px) {
-  .project-card {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .image-container {
-    margin: 10px;
-    margin-bottom: 2px;
-    width: 80%;
-  }
-  
-  .info-container {
-    align-items: center;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 0;
-    height: auto;
-    margin: 10px;
-    margin-top: 0;
-    padding: 15px;
-    width: 75%;
-  }
-  
-  .tech-container {
-    justify-content: center;
-    margin-bottom: 10px;
-    height: auto;
-    width: 100%;
-  }
-  
-  .links-container-2 {
-    margin-top: 5px;
-  }
-  
-  .aboutProject {
-     text-align: center;
-  }
-  
-  .links-container-2 {
-    justify-content: center !important;
-    flex-direction: column;
-  }
-}
-
-@media screen  and (max-width: 600px) {
-  .links-container-2 {
-    flex-direction: column;
-  }
-}
+/* 
 
 
 
-
-@media screen  and (max-width: 1200px) {
-  .project-card {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .image-container {
-    margin: 10px;
-    margin-bottom: 2px;
-    width: 80%;
-  }
-  
-  .info-container {
-    align-items: center;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 0;
-    height: auto;
-    margin: 10px;
-    margin-top: 0;
-    padding: 15px;
-    width: 75%;
-  }
-  
-  .links-container-2 {
-    margin-top: 5px;
-    justify-content: center;
-  }
-  
-  .tech-container {
-    justify-content: center;
-    margin-bottom: 10px;
-    height: auto;
-    width: 100%;
-  }
-  
-  .aboutProject {
-    text-align: center;
- }
- 
-} */
+ */
