--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -43,9 +43,10 @@
 }
 
 .skills span {
-  border: 2px solid whitesmoke;
+  border: 2px solid #14a2a9;
   border-radius: 5px;
-  color: black;
+  color: rgb(255, 255, 255);
+  cursor: default;
   font-family: 'Nunito', sans-serif;
   font-weight: 600;
   padding: 0.2rem 0.5rem;
@@ -66,57 +67,6 @@
   justify-content: flex-start;
 }
 
-.tech-CSS {
-  background-color: #028ede;
-}
-
-.tech-HTML {
-  background-color: #ff600a;
-}
-
-.tech-JavaScript {
-  background-color: #ffe11f;
-}
-
-.tech-React {
-  background-color: #4cd8fa;
-}
-
-.tech-Redux {
-  background-color: #7d62bc;
-}
-
-.tech-RTL {
-  background-color: #fe2020;
-}
-
-.tech-Jest {
-  background-color: #b4415e;
-}
-
-.tech-TypeScript {
-  background-color: #3b80ce;
-}
-
-.tech-Git {
-  background-color: #ee3e1b;
-}
-
-.tech-GitHub {
-  background-color: #7a7a7a;
-}
-
-.tech-VSCode {
-  background-color: #008ff5;
-}
-
-.tech-Figma {
-  background-color: #02d084;
-}
-
-.tech-Linux {
-  background-color: #ffc71f;
-}
 
 @media screen and (min-width: 601px) and (max-width: 900px) {
   .aboutme-main {
