--- a/src/styles/headerHome.css
+++ b/src/styles/headerHome.css
@@ -4,7 +4,8 @@
   box-shadow:  0 5px 10px 0 rgba(14, 2, 27, 0.7);
   display: inline-flex;
   justify-content: center;
-  max-height: 85px;
+  max-height: 60px;
+  min-height: 50px;
   position: fixed;
   width: 100%;
 }
